Update rubocop obsolete config https://travis-ci.org/alfa-jpn/mysql2-aurora/jobs/544009084

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -57,10 +57,10 @@ Lint/AmbiguousBlockAssociation:
 Layout/ExtraSpacing:
   AllowForAlignment: true
 
-Layout/IndentArray:
+Layout/IndentFirstArrayElement:
   EnforcedStyle: consistent
 
-Layout/IndentHash:
+Layout/IndentFirstHashElement:
   EnforcedStyle: consistent
 
 Layout/MultilineMethodCallBraceLayout:
